--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   image_picker: ^1.1.2
   get_storage: ^2.0.3
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
